--- a/public/посты.yaml
+++ b/public/посты.yaml
@@ -64,16 +64,14 @@
   html: Плата типовая /dev/ttyUSB0 (Silicon Labs, usb-Silicon_Labs_CP2102_USB_to_UART_Bridge_Controller_0001-if00-port0)
   code: >
     1. Установить питоновский флэшер:
-    
       $ pip install esptool --user
 
     2. Скачать бинарную прошивку https://nodemcu-build.com/ (ссылка придет на почту)
 
     3. Прошивается:
-    
       $ python .local/lib/python3.7/site-packages/esptool.py --trace --port /dev/ttyUSB0 --baud 921600 write_flash -fm dio 0x00000 Загрузки/nodemcu-release-9-modules-2020-10-29-08-17-17-float.bin
 
-    4. Установить https://github.com/andidittrich/NodeMCU-Tool
+    4. Установить https://github.com/andidittrich/NodeMCU-Tool :
       $  npm install nodemcu-tool -g
 
     $ nodemcu-tool ... пошло-поехало... и все закрутилось ...
