--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite --force",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
@@ -19,8 +19,7 @@
 		"defaults"
 	],
 	"dependencies": {
-		"axios": "^0.21.4",
-		"simple-scrollbar": "^0.4.0",
+		"simple-scrollbar": "github:mche/simple-scrollbar",
 		"yaml": "2.0.0-8"
 	}
 }
