--- a/public/посты.yaml
+++ b/public/посты.yaml
@@ -63,7 +63,7 @@
 -
   title: Тестовое задание на Vue
   html: >
-    Сделал для приема на работу. Ни ответа, ни привета. Глянуть  -  <a href="http://aiti.surge.sh">демо</a>,  <a href="https://github.com/mche/aiti-test">исходники</a>
+    Сделал для приема на работу. Ни ответа, ни привета. Глянуть  -  <a href="http://aiti.surge.sh">демо</a>,  <a href="https://github.com/mche/aiti-test">исходники</a>.
 -
   title: SVG-ништяки
   html: >
